--- a/DUA_WPF/Views/DrawerList.xaml
+++ b/DUA_WPF/Views/DrawerList.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="DUA_WPF.Views.MainView"
+﻿<UserControl x:Class="DUA_WPF.Views.DrawerList"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,9 +6,7 @@
              xmlns:local="clr-namespace:DUA_WPF.Views"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-        
-        
-        <TextBlock HorizontalAlignment="Center" FontSize="45">MainView</TextBlock>
-    </Grid>
+    <ListBox ItemsSource="{Binding DrawerItems}" SelectedIndex="{Binding SelectedIndex}">
+       
+    </ListBox>
 </UserControl>
