--- a/DUA_WPF/Views/GroupsView.xaml
+++ b/DUA_WPF/Views/GroupsView.xaml
@@ -27,14 +27,26 @@
             <StackPanel Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="0 0 20 0">
 
                 <Button  Margin="5">Remove</Button>
-                <Button   Margin="5">Add</Button>
+                <Button  Command="{Binding AddGroupCommand}" Margin="5">Add</Button>
             </StackPanel>
 
-            <ListView Grid.Row="1">
-                <ListViewItem>Hello1</ListViewItem>
-                <ListViewItem>Hello2</ListViewItem>
-                <ListViewItem>Hello3</ListViewItem>
-                <ListViewItem>Hello4</ListViewItem>
+            <ListView Grid.Row="1" ItemsSource="{Binding Groups}">
+                <ListView.View>
+                    <GridView>
+                        <GridView.Columns>
+                            <GridViewColumn Header="Name" DisplayMemberBinding="{Binding Name}"></GridViewColumn>
+                            <GridViewColumn Header="Template" DisplayMemberBinding="{Binding Template.Name}"></GridViewColumn>
+
+                            <GridViewColumn Header="Edit">
+                                <GridViewColumn.CellTemplate>
+                                    <DataTemplate>
+                                        <Button>Edit</Button>
+                                    </DataTemplate>
+                                </GridViewColumn.CellTemplate>
+                            </GridViewColumn>
+                        </GridView.Columns>
+                    </GridView>
+                </ListView.View>
             </ListView>
 
             <Button Grid.Row="2" VerticalAlignment="Center"  HorizontalAlignment="Right" Margin="0 0 20 0" >Apply</Button>
