--- a/ModalControl/Themes/Generic.xaml
+++ b/ModalControl/Themes/Generic.xaml
@@ -2,48 +2,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="clr-namespace:ModalControl">
-    <ResourceDictionary x:Key="dic1">
-        <Style x:Key="closeButtonStyle" TargetType="Button">
-            <Setter Property="Template">
-                <Setter.Value>
-                 
-                        <ControlTemplate TargetType="{x:Type Button}">
-                            <Border
-                        x:Name="border"
-                        CornerRadius="2"
-                        Background="{TemplateBinding Background}"
-                        BorderBrush="{TemplateBinding BorderBrush}"
-                        BorderThickness="{TemplateBinding BorderThickness}"
-                        SnapsToDevicePixels="true">
-                                <ContentPresenter
-                            x:Name="contentPresenter"
-                            Margin="{TemplateBinding Padding}"
-                            HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
-                            VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
-                            Focusable="False"
-                            TextElement.Foreground ="{TemplateBinding Foreground}"
-                            RecognizesAccessKey="True"
-                            TextElement.FontFamily="Helvetica"
-                            SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" />
-                            </Border>
-                            <ControlTemplate.Triggers>
 
-                                <Trigger Property="IsMouseOver" Value="true">
-
-                                    <Setter TargetName="contentPresenter" Property="TextElement.Foreground" Value="Gray" />
-                                </Trigger>
-                                <Trigger Property="IsPressed" Value="true">
-
-                                    <Setter TargetName="contentPresenter" Property="TextElement.Foreground" Value="Black" />
-                                </Trigger>
-
-                            </ControlTemplate.Triggers>
-                        </ControlTemplate>
-                    
-                </Setter.Value>
-            </Setter>
-        </Style>
-    </ResourceDictionary>
     <Style TargetType="{x:Type local:ModalControl}">
         <Setter Property="Template">
             <Setter.Value>
@@ -51,50 +10,60 @@
                     <ControlTemplate.Resources>
                         <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
                     </ControlTemplate.Resources>
-                    <Grid Background="{TemplateBinding Background}" Visibility="{TemplateBinding IsOpen, Converter={StaticResource BooleanToVisibilityConverter}}">
-                        <Border
-                            HorizontalAlignment="Center"
-                            VerticalAlignment="Center" Background="White" Padding="5" CornerRadius="5"
+                    <Border
+                            HorizontalAlignment="Stretch"  Visibility="{TemplateBinding IsOpen, Converter={StaticResource BooleanToVisibilityConverter}}"
+                            VerticalAlignment="Stretch"   Padding="5" 
                             BorderBrush="{TemplateBinding BorderBrush}"  Width="auto" Height="auto"   
                             BorderThickness="{TemplateBinding BorderThickness}"
                             UseLayoutRounding="True">
-                            <Grid  >
+                        <Border.Background>
+                            <SolidColorBrush>
+                                <SolidColorBrush.Color>
+                                    Gray
+                                </SolidColorBrush.Color>
+                                <SolidColorBrush.Opacity>0.5</SolidColorBrush.Opacity>
+                            </SolidColorBrush>
+                        </Border.Background>
+                        <Border  Margin="50"  CornerRadius="5" Background="{TemplateBinding Background}">
+
+                            <Grid >
                                 <Grid.RowDefinitions>
-                                    <RowDefinition/>
-                                    <RowDefinition/>
+                                    <RowDefinition Height="auto"/>
+                                    <RowDefinition Height="*"/>
                                 </Grid.RowDefinitions>
                                 <Grid.ColumnDefinitions>
-                                    <ColumnDefinition/>
-                                    <ColumnDefinition/>
+                                    <ColumnDefinition Width="*"/>
+                                    <ColumnDefinition Width="auto"/>
 
                                 </Grid.ColumnDefinitions>
 
 
-                                <Button Grid.Column="1" x:Name="CloseButton"  Width="16" Height="16" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="5" >
+                                <Button Grid.Column="1" x:Name="CloseButton"   Width="16" Height="16" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="10" >
                                     <Button.Template>
                                         <ControlTemplate TargetType="{x:Type Button}">
                                             <Border
-                        x:Name="border"
-                        CornerRadius="2"
-                        Background="Transparent"
-                        BorderBrush="Transparent"
-                        BorderThickness="{TemplateBinding BorderThickness}"
-                        SnapsToDevicePixels="true">
+x:Name="border"
+CornerRadius="20"
+                                                
+Background="Red"
+BorderBrush="Transparent"
+BorderThickness="{TemplateBinding BorderThickness}"
+SnapsToDevicePixels="true">
                                                 <ContentPresenter
-                            x:Name="contentPresenter"
-                            Margin="{TemplateBinding Padding}"
-                            HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
-                            VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
-                            Focusable="False"
-                            TextElement.Foreground ="{TemplateBinding Foreground}"
-                            RecognizesAccessKey="True"
-                            TextElement.FontFamily="Helvetica"
-                            SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" />
+    x:Name="contentPresenter"
+    Margin="{TemplateBinding Padding}"
+    HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+    VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
+    Focusable="False"
+    TextElement.Foreground ="{TemplateBinding Foreground}"
+    RecognizesAccessKey="True"
+    TextElement.FontFamily="Helvetica"
+    SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" />
                                             </Border>
                                             <ControlTemplate.Triggers>
 
                                                 <Trigger Property="IsMouseOver" Value="true">
-
+                                                    <Setter Property="Cursor" Value="Hand"/>
                                                     <Setter TargetName="contentPresenter" Property="TextElement.Foreground" Value="Gray" />
                                                 </Trigger>
                                                 <Trigger Property="IsPressed" Value="true">
@@ -105,28 +74,17 @@
                                             </ControlTemplate.Triggers>
                                         </ControlTemplate>
                                     </Button.Template>
-                                    <Image Stretch="Uniform">
-                                        <Image.Source>
-                                            <DrawingImage>
-                                                <DrawingImage.Drawing>
-                                                    <GeometryDrawing Brush="Black" Geometry="M0,0 L24,24 M0,24 L24,0">
-                                                        <GeometryDrawing.Pen>
-                                                            <Pen Brush="Black" Thickness="2"/>
-                                                        </GeometryDrawing.Pen>
-                                                    </GeometryDrawing>
-                                                </DrawingImage.Drawing>
-                                            </DrawingImage>
-                                        </Image.Source>
-                                    </Image>
-                                </Button>
+                               </Button>
 
 
 
-                                <ContentControl Grid.Row="1" Content="{TemplateBinding Content}" />
+                                <ContentControl Grid.ColumnSpan="2" Grid.Row="1" Content="{TemplateBinding Content}" />
+
                             </Grid>
-
                         </Border>
-                    </Grid>
+
+                    </Border>
+
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
