--- a/DUA_WPF/DUA_Main.xaml
+++ b/DUA_WPF/DUA_Main.xaml
@@ -17,7 +17,9 @@
      FontFamily="{DynamicResource MaterialDesignFont}"
         mc:Ignorable="d"
         MinHeight="700" MinWidth="700"
-        Title="DUA_Main" Height="850" Width="800">
+        Title="DUA_Main" Height="850" Width="800"
+        
+        >
     <Window.Resources>
         
         <ResourceDictionary>
@@ -25,6 +27,8 @@
              <ResourceDictionary>
                     <Style TargetType="TextBlock">
                         <Setter Property="Foreground" Value="White"/>
+               
+                        <Setter Property="VerticalAlignment" Value="Center"/>
                     </Style>
                     <Style TargetType="Button">
                         <Setter Property="Foreground" Value="White"/>
@@ -40,10 +44,14 @@
             <ColumnDefinition Width=".3*"/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
-        <modal:ModalControl HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Background="#2C2C2C" x:Name="AppModal" CloseCommand="{Binding CloseModalCommand}" IsOpen="{Binding IsModalOpen}" Content="{Binding ModalContent}" Grid.ColumnSpan="2" Panel.ZIndex="10"></modal:ModalControl>
-
-        <ContentControl Grid.Column="0" Content="{Binding DrawerListViewModel}"></ContentControl>
-        <ContentControl Grid.Column="1" Content="{Binding CurrentViewModel}"></ContentControl>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto"/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+        <modal:ModalControl HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Background="#2C2C2C" x:Name="AppModal" CloseCommand="{Binding CloseModalCommand}" IsOpen="{Binding IsModalOpen}" Content="{Binding ModalContent}" Grid.ColumnSpan="2" Grid.RowSpan="2" Panel.ZIndex="10"></modal:ModalControl>
+        <TextBlock  Margin="5" Grid.ColumnSpan="2" HorizontalAlignment="Center" FontSize="36" FontFamily="Copperplate Gothic">Dry Utilities Automator</TextBlock>
+        <ContentControl Grid.Row="1" Grid.Column="0" Content="{Binding DrawerListViewModel}"></ContentControl>
+        <ContentControl  Grid.Column="1" Grid.Row="1"  Content="{Binding CurrentViewModel}"></ContentControl>
      
     </Grid>
   
