--- a/DUA_WPF/Views/AlignmentTemplateView.xaml
+++ b/DUA_WPF/Views/AlignmentTemplateView.xaml
@@ -39,11 +39,14 @@
         <Grid Margin="10" Grid.Row="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="auto"/>
+                <ColumnDefinition Width="auto"/>
+                <ColumnDefinition Width="50"/>
+                <ColumnDefinition Width="auto"/>
 
               
                 <ColumnDefinition/>
             </Grid.ColumnDefinitions>
-            <TextBlock Text="Alignment Style:  "/>
+            <TextBlock Text="Alignment Label Set Style:  " Grid.Column="3"/>
             <ComboBox Grid.Column="1" MinWidth="150" HorizontalAlignment="Left" ItemsSource="{Binding AlignmentStyles}" SelectedIndex="{Binding SelectedAlignmentStyleIndex}">
                     <ComboBox.ItemTemplate>
                         <DataTemplate >
@@ -51,7 +54,17 @@
                         </DataTemplate>
                     </ComboBox.ItemTemplate>
                 </ComboBox>
-        </Grid>
+                <TextBlock Text="Alignment Style:  "/>
+                <ComboBox Grid.Column="4" MinWidth="150" HorizontalAlignment="Left" ItemsSource="{Binding AlignmentLabelSets}" SelectedIndex="{Binding SelectedAlignmentLabelSetIndex}">
+                    <ComboBox.ItemTemplate>
+                        <DataTemplate >
+                            <TextBlock Text="{Binding Name}"></TextBlock>
+                        </DataTemplate>
+                    </ComboBox.ItemTemplate>
+                </ComboBox>
+
+
+            </Grid>
     </Grid>
     </GroupBox>
 </UserControl>
