--- a/DUA_WPF/Views/GroupsView.xaml
+++ b/DUA_WPF/Views/GroupsView.xaml
@@ -18,19 +18,23 @@
             </Grid.RowDefinitions>
             <StackPanel Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="20 0 0 0">
 
-                <TextBlock Text="Surface:" Margin="5"/>
-                <ComboBox SelectedIndex="0" Margin="5">
-                    <ComboBoxItem>surface1</ComboBoxItem>
-                    <ComboBoxItem>surface2</ComboBoxItem>
+
+                <TextBlock Text="Surface:" VerticalAlignment="Center" Margin="5"/>
+                <ComboBox MinWidth="100" SelectedIndex="{Binding SelectedSurfaceIndex}" ItemsSource="{Binding Surfaces}">
+                    <ComboBox.ItemTemplate>
+                        <DataTemplate >
+                            <TextBlock Text="{Binding Name}"></TextBlock>
+                        </DataTemplate>
+                    </ComboBox.ItemTemplate>
                 </ComboBox>
             </StackPanel>
             <StackPanel Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="0 0 20 0">
 
-                <Button  Margin="5">Remove</Button>
-                <Button  Command="{Binding AddGroupCommand}" Margin="5">Add</Button>
+                <Button Command="{Binding DeleteGroupCommand}" IsEnabled="{Binding CanDeleteEnabled}" Margin="5">Remove</Button>
+                <Button  Command="{Binding AddGroupCommand}" IsEnabled="{Binding CanAddEnabled}" Margin="5">Add</Button>
             </StackPanel>
 
-            <ListView Grid.Row="1" ItemsSource="{Binding Groups}">
+            <ListView Grid.Row="1" ItemsSource="{Binding Groups}" SelectedIndex="{Binding SelectedGroupIndex}">
                 <ListView.View>
                     <GridView>
                         <GridView.Columns>
@@ -40,7 +44,7 @@
                             <GridViewColumn Header="Edit">
                                 <GridViewColumn.CellTemplate>
                                     <DataTemplate>
-                                        <Button>Edit</Button>
+                                        <Button Command="{Binding EditCommand}">Edit</Button>
                                     </DataTemplate>
                                 </GridViewColumn.CellTemplate>
                             </GridViewColumn>
@@ -49,7 +53,7 @@
                 </ListView.View>
             </ListView>
 
-            <Button Grid.Row="2" VerticalAlignment="Center"  HorizontalAlignment="Right" Margin="0 0 20 0" >Apply</Button>
+            <Button Command="{Binding ApplyCommand}" Grid.Row="2" VerticalAlignment="Center" Margin="10 20"  HorizontalAlignment="Right"  >Apply</Button>
         </Grid>
     </Border>
 </UserControl>
