--- a/DUA_WPF/Views/TemplateView.xaml
+++ b/DUA_WPF/Views/TemplateView.xaml
@@ -35,6 +35,6 @@
             </Grid>
 
         </ScrollViewer>
-        <Button Command="{Binding ButtonModeCommand}" Content="{Binding ButtonModeContent}" Grid.Row="4"  Grid.Column="2" Margin="5" HorizontalAlignment="Right" VerticalAlignment="Center"></Button>
+        <Button Command="{Binding ButtonModeCommand}" Content="{Binding ButtonModeContent}" IsEnabled="{Binding CanApplyEnabled}" Grid.Row="4"  Grid.Column="2" Margin="5" HorizontalAlignment="Right" VerticalAlignment="Center"></Button>
     </Grid>
 </UserControl>
