--- a/ModalControl/Themes/Generic.xaml
+++ b/ModalControl/Themes/Generic.xaml
@@ -24,7 +24,7 @@
                                 <SolidColorBrush.Opacity>0.5</SolidColorBrush.Opacity>
                             </SolidColorBrush>
                         </Border.Background>
-                        <Border  Margin="50"  CornerRadius="5" Background="{TemplateBinding Background}">
+                        <Border  Margin="50"  HorizontalAlignment="Center"   VerticalAlignment="Center" CornerRadius="5" Background="{TemplateBinding Background}">
 
                             <Grid >
                                 <Grid.RowDefinitions>
